# rlmpc

./: .gitignore  README.md  acados_ocp_kinematic_csog_with_acceleration_and_path_timing.json  cont_standard_tsac_nmpc_pp.slurm  copy_data_from_idun.sh  evaluate_baseline.slurm  install_project.sh  pyproject.toml  setup.cfg  simple_tsac_nmpc_pp.slurm  standard_ppo_nmpc_pp.slurm  standard_ssac_nmpc_pp.slurm  standard_tsac_nmpc_pp.slurm  train_drl.slurm  train_sac_nmpc_pp.slurm  tsac_nmpc_pp.slurm  tsac_standard_nmpc_pp.slurm
config/: antigrounding_mpc.yaml  eval_simulator.yaml  rewarder.yaml  rewarder_drl.yaml  rewarder_only_neg.yaml  rl_mpc.yaml  rl_rrt_mpc.yaml  rlmpc.yaml  rlmpc_baseline.yaml  scenario_generator.yaml  training_simulator.yaml  trajectory_tracking_rl_mpc.yaml  ttmpc.yaml
data/: rrt_solution.yaml  rrt_solution2.yaml
rl_rrt_mpc/: agent.py  agents.py  antigrounding_mpc.py  colregs_handler.py  gmm_em.py  models.py  mpc.py  nmpc.py  off_policy_algorithm.py  replay_buffer.py  rl.py  rlmpc.py  rlrrtmpc.py  sac.py  trajectory_tracking_mpc.py
rl_rrt_mpc/common/: alternative_set_generation.py  datasets.py  helper_functions.py  integrators.py  map_functions.py  math_functions.py  nn_utils.py  paths.py  rbf_casadi.py  smallestenclosingcircle.py
rl_rrt_mpc/informed_rrt_star_rust/: Cargo.toml
rl_rrt_mpc/informed_rrt_star_rust/data/: hazards.json  land.json  rrt_result.json  safe_sea_triangulation.json  seabed.json  shore.json
rl_rrt_mpc/informed_rrt_star_rust/src/: enc_data.rs  enc_hazards.rs  informed_rrt_star.rs  lib.rs  rrt_error.rs  steering.rs  utils.rs
rl_rrt_mpc/mpc/: acados_mpc.py  alternative_set_generation.py  casadi_mpc.py  common.py  integrators.py  models.py  mpc.py  mpc_interface.py  parameters.py  set_generator.py
rl_rrt_mpc/networks/: encoder.py  feature_extractors.py  loss_functions.py  perception_image_decoder.py  perception_image_encoder.py  variational_autoencoder.py  vqvae.py  vqvae3.py
rl_rrt_mpc/rl_mpc/: __init__.py  acados_mpc.py  casadi_mpc.py  integrators.py  mpc.py  nmpc.py  nmpc_acados.py  nmpc_casadi.py  parameters.py
rl_rrt_mpc/rrt_rust/: Cargo.toml
rl_rrt_mpc/rrt_rust/.config/: config.toml
rl_rrt_mpc/rrt_rust/src/: enc.rs  lib.rs  rrt.rs
rl_rrt_mpc/rrt_star_lib/: Cargo.toml
rl_rrt_mpc/rrt_star_rust/: Cargo.toml
rl_rrt_mpc/scenarios/: rlmpc_scenario_easy_cr_ss.yaml
rl_rrt_mpc/schemas/: rl_mpc.yaml  rl_rrt_mpc.yaml  rlmpc.yaml  trajectory_tracking_rl_mpc.yaml  ttmpc.yaml
rlmpc/: __init__.py  action.py  buffers.py  colregs_handler.py  evaluate_agent.py  off_policy_algorithm.py  policies.py  rewards.py  rlmpc.py  rlmpc_cas.py  rlrrtmpc.py  sac.py  standard_sac.py  train_critics.py  train_drl_sac.py  train_rlmpc_sac.py  trajectory_tracking_mpc.py
rlmpc/common/: alternative_set_generation.py  buffers.py  callbacks.py  config_parsing.py  datasets.py  file_utils.py  gmm_em.py  helper_functions.py  integrators.py  logger.py  map_functions.py  math_functions.py  paths.py  plotters.py  rbf_casadi.py  reporting.py  running_loss.py  set_generator.py  smallestenclosingcircle.py
rlmpc/mpc/: common.py  models.py  parameters.py
rlmpc/networks/: feature_extractors.py  loss_functions.py  mpc_critic.py  vqvae.py  vqvae2.py  vqvae3.py  vqvae_bignet.py
rlmpc/schemas/: rlmpc.yaml  ttmpc.yaml
rlmpc/scripts/: augment_image_data.py  evaluate_agent.py  extract_enc_images_from_episode_data.py  generate_perception_image_training_data.py  generate_scenario_episodes.py  generate_tracking_vae_training_data.py  plot_potential_functions.py  plot_rate_costs.py  plot_replay_buffer.py  plot_results.py  run_pretraining_mpc_param_provider.py  run_pretraining_mpc_param_provider_hpo.py  train_critics.py  train_drl_sac.py  (+9 more)
run_examples/: run_antigrounding_nmpc_near_land_tracking.py  run_baseline_mid_level_nmpc.py  run_pretraining_mpc_param_provider.py  run_pretraining_mpc_param_provider_hpo.py  run_pretraining_sac_critics_hpo.py  run_pretraining_standard_sac_critics_hpo.py  run_training_sac_nmpc_policy.py  run_training_sac_nmpc_pp.py  run_training_sac_nmpc_pp_simple_extractor.py  run_training_sac_standard_nmpc_pp.py  run_training_sac_standard_nmpc_pp_simpler_extractor.py  run_training_tracking_vae_attention_hpo.py  run_vanilla_training_drl.py
scenarios/: boknafjorden_generation_test.yaml  rl_scenario.yaml  rlmpc_scenario_archipelago_w_disturbances.yaml  rlmpc_scenario_cr_ss.yaml  rlmpc_scenario_easy_cr_ss.yaml  rlmpc_scenario_head_on_channel.yaml  rlmpc_scenario_ho.yaml  rlmpc_scenario_ms_channel.yaml  rlmpc_scenario_random_everything.yaml  rlmpc_scenario_random_everything2.yaml  rlmpc_scenario_random_everything_test.yaml  rlmpc_scenario_random_many_vessels.yaml  rogaland_random_rl.yaml  test_rlmpc.yaml
scripts/: extract_enc_images_from_episode_data.py  generate_perception_image_training_data.py  visualize_datasets.py
slurm_scripts/: evaluate_baseline.slurm  simple_tsac_nmpc_pp.slurm  standard_ssac_nmpc_pp.slurm  standard_tsac_nmpc_pp.slurm  train_drl.slurm  tsac_nmpc_pp.slurm
tests/: augment_image_data.py  generate_perception_image_training_data.py  generate_perection_image_training_data.py  generate_scenario_episodes.py  generate_tracking_vae_training_data.py  generate_training_data.py  plot_evaluation_results.py  plot_replay_buffer.py  plot_training_results.py  pretrain_drl_sac.py  pretrain_mpc_param_prover.py  pretrain_mpc_param_provider.py  pretrain_perception_image_vae.py  pretrain_sac_critic.py  prog.prof  test_baseline_nmpc.py  test_baseline_nmpc_run.py  test_colregs_cost.py  test_drl.py  test_drl_mpi.py  test_gym_rlrrtmpc.py  test_gym_sac_rlmpc.py  test_gym_with_mpc_param_action.py  test_mountaincar.py  test_mpc_near_land_tracking.py  test_p_values.py  test_plot_results.py  test_potential_functions.py  test_prediction_of_mpc_dnn.py  test_pretrain_mpc_param_provider.py  test_pretrain_mpc_param_provider_hpo.py  test_pretrain_sac_critics_hpo.py  test_pretrain_standard_sac_critics_hpo.py  test_rate_costs.py  test_rl.py  test_rl_rrt_mpc.py  test_rlmpc.py  test_rlrrtmpc_rl_scenario.py  test_sac_rlmpc.py  test_sac_rlmpc_param_provider.py  (+18 more)
(+75 files in other folders)
