[metadata]
name = rl_rrt_mpc
version = 0.0.1
author = Trym Tengesdal
author_email = tengesdal1994@gmail.com
description = COLAV algorithm with automatic adjustment based on RL.
url = https://github.com/trymte/rl_rrt_mpc.git
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = maritime collision avoidance, rust, python, Informed RRT*, MPC, RL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Rust
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Bug Tracker = https://github.com/trymte/rl_rrt_mpc/issues

[options]
package_dir =
  '' = rl_rrt_mpc
packages = find:
install_requires =
    numpy
    matplotlib
    matplotlib-scalebar
    scipy
    cerberus
    pandas
    shapely
    pyyaml
    dacite
    geopy
    tensorflow
    future-fstrings
    geopandas
    rtree
    maturin
    cvxpy
    opencv-python
    pygame
    gymnasium>=0.28.1
    torch>=1.13
    torchsummary
    stable_baselines3
    tqdm
    rich
    # triangle # does not work on macOS, install separately
    #acados_template # does not work on macOS M1+, install separately
    #casadi
    #seacharts
python_requires = >=3.10
test_suite = tests