[metadata]
name = rlmpc
version = 0.0.1
author = Trym Tengesdal
author_email = tengesdal1994@gmail.com
description = Software for anti-grounding MPCs, situation dependent MPC-tuning using Soft Actor Critic, feature extractors for DRL, and more.
url = https://github.com/NTNU-Autoship-Internal/rlmpc.git
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = maritime collision avoidance, python, MPC, RL, SAC, VAE, feature extraction
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/NTNU-Autoship-Internal/rlmpc/issues

[options]
package_dir =
  '' = rlmpc
packages = find:
install_requires =
    numpy
    matplotlib
    matplotlib-scalebar
    scipy
    optuna
    optuna-dashboard
    cerberus
    pandas
    shapely
    pytorch-warmup
    pyyaml
    seaborn
    geopy
    tensorflow
    future-fstrings
    memory_profiler
    geopandas
    rtree
    maturin
    cvxpy
    opencv-python
    pygame
    scikit-image
    einops
    gymnasium>=0.28.1
    torchvision
    torch>=1.13
    stable_baselines3
    tqdm
    rich
    distributed
    #casadi
    #seacharts
    #colav_simulator
python_requires = >=3.10
test_suite = tests