[package]
name = "rrt_star_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rrt_star_rust"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.18.1"

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
config = "0.13.3"
anyhow = "1.0.51"
pyo3 = { version = "0.18.1", features = ["auto-initialize"]}
rand = "0.8.5"
nalgebra = "0.32.1"
rstar = "0.10.0"
id_tree = "1.8.0"
num = "0.4.0"
geo = "0.23.1"
rand_chacha = "0.3.1"
plotters = "0.3.4"
typenum = "1.16.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3