[package]
name = "rrt_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rrt_rust"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.152", features = ["derive"] }
config = "0.13.3"
anyhow = "1.0.51"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
rand = "0.8.4"
rc = "0.1.1"
nalgebra = "0.32.1"
rstar = "0.10.0"
geo = "0.23.1"